
Changelog for SEMS 
 - support for posting events into conferences

 - support for receiving early media

 - support for local audio as audio sources into audio engine 
   on the same channel as RTP 

 - outbound_proxy option sets next hop on outgoing dialogs and 
   registrations

 - b/f: don't reuse dialog for SIp authenticated re-sending of INVITE

Version 0.10.0 (final)
 - new module for exposing internal DI APIs via XMLRPC 

 - new module for triggering calls via DI interface
 
 - new DI/XMLRPC controlled conference application, that can for example
   be used for conference rooms with web interface

 - CallWatcher and a more powerful dialout function simplifies 
   interfacing to external applications 

 - many examples for quick start of custom service development, 
   for example new serviceline (auto-attendant) application

 - b2bua implementation with media relay
 
 - language awareness of conference application 

 - DB support for conference and voicemail prompts, and announcements

 - PromptCollection simplifies usage of prompts in applications

 - b2bua support in py_sems embedded python interpreter

 - corrected RTP timeout detection 

 - new api for custom logging modules, new in-memory ring buffer 
   logging module

 - accept all possible payloads and payload switching on the fly 
   (thanks to Maxim Sobolyev/sippysoft) 

 - changing callgroups (media processing threads) in running sessions 

 - support for setting sessions on hold 

 - support for OpenSer 1.3 

 - substantially improved documentation 

 - 'bundle' install method for easy installation

 - support for OpenWRT package build

 ... and many bugfixes

Version 0.10.0 rc2

 - new Adaptive jitter buffer as alternative playout method
   Contributed by Andriy Pylypenko/Sippy Software

 - new PIN collect application with transfer to e.g. 
   separate conference bridge

 - new SIP registrar client for registration at a 
   SIP registrar

 - new UAC authentication component
