@@ -1,5 +1,7 @@
 
 Changelog for SEMS 
+ - early media receiving example
+
  - support for posting events into conferences
 
  - support for receiving early media
